<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
    </group>
    <item
        android:id="@+id/ss_menu_inspecciones_finalizadas"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/menu_ssoma_inspecciones_finalizadas"/>
    <item
        android:id="@+id/ss_menu_inspecciones_pendientes"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/menu_ssoma_inspecciones_pendientes"/>
    <item
        android:id="@+id/ss_menu_registro_inspecciones"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/menu_ssoma_opcion_registro_inspecciones"/>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/menu_otros">
        <menu>
            <item
                android:id="@+id/ssoma_salir"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/menu_logout"/>
        </menu>
    </item>
</menu>