<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:weightSum="1"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo"
            android:layout_centerHorizontal="true"
            android:layout_margin="40dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_below="@+id/img_logo">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_in_layout_usuario"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etxt_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/login_tv_usuario"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_in_layout_password"
                android:layout_below="@id/txt_in_layout_usuario"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etxt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:inputType="textPassword"
                    android:layout_below="@+id/etxt_user"
                    android:hint="@string/login_tv_password"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_ingresar"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/txt_in_layout_password"
                android:theme="@style/RaisedButton"/>

            <TextView
                android:id="@+id/etxt_mensaje_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_below="@+id/btn_ingresar"
                android:layout_centerHorizontal="true"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>